cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
project(test VERSION 0.5.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/out)

file(GLOB Src *.cxx)

set(WASM_CONF "${WASM_CONF} --no-heap-copy -g --profiling-funcs")
set(JS_CONF "${JS_CONF} -s ALLOW_MEMORY_GROWTH=1 -s DEMANGLE_SUPPORT=1 -s FORCE_FILESYSTEM=0 -s USE_FREETYPE=1 -s USE_LIBPNG=1 -s WARN_UNALIGNED=1 -s ERROR_ON_UNDEFINED_SYMBOLS=1 -s USE_WEBGL2=1 -s WASM=1 -s ASSERTIONS=1")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${WASM_CONF} ${JS_CONF} --bind")
set(CMAKE_EXECUTABLE_SUFFIX ".js")
add_executable(test ${Src})
